<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>portexpander</name>
  <version>0.0.0</version>
  <description>Bridge between ROS and the I2C-Portexpander MCP23017</description>
  <maintainer email="Accounts@PascalPieper.de">Cirro</maintainer>
  <license>Use this</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
